mobile home page layout problems fixed

--- a/src/components/bookcard.module.css
+++ b/src/components/bookcard.module.css
@@ -1,38 +1,16 @@
 .book-card {
-  background-image: linear-gradient(to bottom,rgba(20, 16, 0,1),#001712,#001712,rgba(20, 16, 0,.8));
+  /* background-image: linear-gradient(to bottom,rgba(20, 16, 0,1),#001712,#001712,rgba(20, 16, 0,.8)); */
+  background-color:#001712;
   width:90vw;
   height:30vh;
   display: flex;
-
+  justify-content: space-around;
+  align-items: center;
+  text-decoration: none;
+  color: white;
 }
 
-.card-media{
+.card-media {
+  width:30vw;
   height:22vh;
-  width: 30vw;
-  object-fit:contain;
-  /* margin: .5vh 5vh; */
-}
-
-.card-text{
- color:white;
- display: flex;
- flex-direction: column ;
- justify-content: center;
-}
-
-.card-text-inner {
-  display:flex ;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.book-action-area{
-  width:100%;
-  height:100%;
-  display: flex;
-  flex-direction:row;
-  align-items: center;
-  justify-content:space-around;
 }
